<resources>
    <string name="app_name" translatable="false">Rent My Awesome Car</string>
    <string name="rmac_logo" translatable="false">RMAC LOGO</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_settings">Settings</string>
    <string name="register">REGISTER</string>
    <string name="register_text">Register</string>
    <string name="register_username">Username</string>
    <string name="register_date_of_birth">Date of birth</string>
    <string name="register_address">Address</string>
    <string name="register_phone_number">Phone number</string>
    <string name="register_password">Password</string>
    <string name="login_username">Username</string>
    <string name="login_text">Login</string>
    <string name="cancel">Cancel</string>
    <string name="log_in">Log in</string>
    <string name="register_btn">Register</string>
    <string name="log_in_btn">Log in</string>
    <string name="rmac" translatable="false">rmac</string>
    <string name="new_car">New Car</string>
    <string name="my_cars">My Cars</string>
    <string name="back">Back</string>
    <string name="description">Description</string>
    <string name="color">Color</string>
    <string name="license_plate">License Plate</string>
    <string name="price">Price</string>
    <string name="cpk">Cost Per Kilometer</string>
    <string name="seats">Seats</string>
    <string name="image">Image</string>
    <string name="select_image">Select Image</string>
    <string name="clear_images">Clear Images</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="rent">Rent</string>
    <string name="reservation_date">Reservation Date</string>
    <string name="return_date">Return Date</string>
    <string name="reservation_final" translatable="false">Finalize Reservation</string>
    <string name="terms_conditions">Terms And Conditions</string>
    <string name="rent_date">Rent Date</string>
    <string name="postal_code">Postal Code</string>
    <string name="house_number">House Number</string>
    <string name="reservation_settings">Reservation Settings</string>
    <string name="rent_condition_settings">Rent Condition Settings</string>
    <string name="car_brand">Brand</string>
    <string name="car_type">Type</string>
    <string name="template_postal_code">1234AB</string>
    <string name="template_date">2000–11–22</string>
    <string name="reservations">Reservations</string>
    <string name="cars">Cars</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="autofill">autofill location</string>
    <string name="open_location">Open Locatie</string>
</resources>