<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:text="@string/reservation_settings"
        android:textSize="26sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <EditText
        android:id="@+id/edit_date_reservation_date"
        android:hint="@string/reservation_date"
        android:inputType="date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_date_return_date"
        android:hint="@string/return_date"
        android:inputType="date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/edit_bool_reservation_final"
        android:hint="@string/reservation_final"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_text_terms_conditions"
        android:hint="@string/terms_conditions"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/rent_condition_settings"
        android:textSize="26sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <EditText
        android:id="@+id/edit_date_rent_date"
        android:hint="@string/rent_date"
        android:inputType="date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_text_postal_code"
        android:hint="@string/postal_code"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_text_house_number"
        android:hint="@string/house_number"
        android:inputType="text"
        android:minHeight="48dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="TextFields" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/button_save"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3sp" />
        <Button
            android:id="@+id/button_cancel"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3sp" />

    </LinearLayout>
    <Button
        android:id="@+id/button_back"
        android:text="@string/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3sp"
        android:layout_marginEnd="3sp" />

</LinearLayout>