<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/edit_spinner_car_brand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/car_brands" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:id="@+id/edit_text_description"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_text_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/color" />

    <Spinner
        android:id="@+id/edit_spinner_car_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/car_types" />

    <EditText
        android:id="@+id/edit_text_license_plate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/license_plate" />

    <EditText
        android:id="@+id/edit_text_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/price" />

    <EditText
        android:id="@+id/edit_text_cost_per_kilometer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/cpk" />

    <EditText
        android:id="@+id/edit_text_seats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/seats" />

    <Button
        android:id="@+id/button_select_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_image" />

    <ImageView
        android:id="@+id/image_view_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_baseline_camera_alt_24" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycler_view_car_images"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2sp"
            android:text="@string/save" />
        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2sp"
            android:text="@string/delete" />
        <Button
            android:id="@+id/button_clear_images"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4sp"
            android:text="@string/clear_images" />
    </LinearLayout>

    <Button
        android:id="@+id/button_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        />
</LinearLayout>
